src/test/deca/syntax/valid/test_synt/control_structures/test_if_else.deca
// Description:
//    Test de controle structure if and else 
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 14/01/2022

{
    if( condition == true )
    {
       2+2  ;
    }
    else
    {
        3+3 ; 
    }
    
}