src/test/deca/syntax/invalid/test_synt/control_structures/test_while_one_ligne.deca
// Description:
//    Test de controle structure while
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 14/01/2022

{
    while(condition = true)
        print(hello) ;
    
}